--- a/BulkyBook/BulkyBook/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook/BulkyBook/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,4 +1,5 @@
 ﻿@model BulkyBook.Models.ViewModels.ProductVM
+
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     var title = "Create Product";
@@ -13,9 +14,7 @@
             //edit
             title = "Edit Product";
             <input type="hidden" asp-for="Product.Id" />
-
         }
-
         <div class="col-12 border-bottom">
             <h2 class="text-primary">@title</h2>
         </div>
@@ -91,14 +90,13 @@
                     <span asp-validation-for="Product.Price100" class="text-danger"></span>
                 </div>
             </div>
-
             <div class="form-group row">
                 <div class="col-4">
                     Category
                 </div>
                 <div class="col-8">
-                    @Html.DropDownListFor(m => m.Product.CategoryId, Model.CategoryList, "Select a Category",
-                   new { @class = "form-controll" })
+                    @Html.DropDownListFor(m => m.Product.CategoryId, Model.CategoryList, "-Select a Category",
+                   new { @class = "form-control" })
                     <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                 </div>
             </div>
@@ -107,14 +105,14 @@
                     Cover Type
                 </div>
                 <div class="col-8">
-                    @Html.DropDownListFor(m => m.Product.CoverTypeId, Model.CoverTypeList, "Select a Cover Type",
-                   new { @class = "form-controll" })
+                    @Html.DropDownListFor(m => m.Product.CoverTypeId, Model.CoverTypeList, "-Select a Cover Type",
+                   new { @class = "form-control" })
                     <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-4">
-                    Images
+                    Image
                 </div>
                 <div class="col-8">
                     <input type="file" name="files" id="uploadBox" multiple class="form-control" />
@@ -140,6 +138,12 @@
                 </div>
             </div>
         </div>
+        @if (Model.Product.Id != 0)
+        {
+            <div class="col-3 offset-1 pt-4">
+                <img src="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
+            </div>
+        }
     </div>
 </form>
 
@@ -165,4 +169,5 @@
         };
 
     </script>
+
 }
