--- a/BulkyBook/BulkyBook/Areas/Customer/Views/Cart/Summery.cshtml
+++ b/BulkyBook/BulkyBook/Areas/Customer/Views/Cart/Summery.cshtml
@@ -1,4 +1,7 @@
 ﻿@model BulkyBook.Models.ViewModels.ShoppingCartVM
+
+@using Microsoft.Extensions.Options
+@inject IOptions<BulkyBook.Utility.StripeSetting> Stripe
 <form method="post">
     <br />
     <div class="backgroundWhiteBorder">
@@ -86,12 +89,12 @@
                                                 <h6 class="my-0">@details.Product.Title</h6>
                                                 <small class="text-muted">Quantity: @details.Count</small>
                                             </div>
-                                            <span class="text-muted">$ (@details.Price*@details.Count)</span>
+                                            <span class="text-muted">&#2547; (@details.Price*@details.Count)</span>
                                         </li>
                                     }
                                     <li class="list-group-item d-flex justify-content-between bg-light">
                                         <small class="text-info">Total (BDT)</small>
-                                        <strong class="text-info">$(@Model.OrderHeader.OrderTotal)</strong>
+                                        <strong class="text-info">&#2547;(@Model.OrderHeader.OrderTotal)</strong>
                                     </li>
 
                                 </ul>
@@ -106,7 +109,24 @@
                             <p style="color:maroon; font-size:14px;">Estimate Arrival Date: @DateTime.Now.AddDays(7).ToShortDateString() - @DateTime.Now.AddDays(14).ToShortDateString()</p>
                         </div>
                         <div class="col-12 col-md-4">
+                            @{
 
+
+                                var OrderTotalForStripe = Model.OrderHeader.OrderTotal * 100;
+                            }
+                            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                    data-key="@Stripe.Value.Publishablekey"
+                                    data-amount="@OrderTotalForStripe"
+                                    data-name="Bulky Book"
+                                    data-label="Place Order"
+                                    data-description="Get Books, For Less"
+                                    data-locale="auto"
+                                    data-allow-remember-me="false"
+                                    data-image="https://stripe.com/img/documentation/checkout/marketplace.png">
+                            </script>
+                            <script>
+                                    document.getElementsByClassName("stripe-button-el")[0].style.display = 'none';
+                            </script>
                             <button type="submit" value="Place Order" class="btn btn-success form-control">Place Order</button>
                         </div>
                     </div>
