Added 14. Process Delayed Payments

--- a/BulkyBook/BulkyBook/Areas/Customer/Views/Cart/Summery.cshtml
+++ b/BulkyBook/BulkyBook/Areas/Customer/Views/Cart/Summery.cshtml
@@ -31,6 +31,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.Name" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.Name" class="text-danger" ></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -39,6 +40,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.PhoneNumber" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -47,6 +49,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.StreetAddress" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.StreetAddress" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -55,6 +58,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.City" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.City" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -63,6 +67,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.State" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.State" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -71,6 +76,7 @@
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.PostalCode" type="text" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PostalCode" class="text-danger"></span>
                                     </div>
                                 </div>
                             </div>
@@ -114,6 +120,8 @@
 
                                 var OrderTotalForStripe = Model.OrderHeader.OrderTotal * 100;
                             }
+                            @if (Model.OrderHeader.ApplicationUser.Company == null || !Model.OrderHeader.ApplicationUser.Company.IsAuthorizedCompany)
+                            {
                             <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                                     data-key="@Stripe.Value.Publishablekey"
                                     data-amount="@OrderTotalForStripe"
@@ -127,7 +135,12 @@
                             <script>
                                     document.getElementsByClassName("stripe-button-el")[0].style.display = 'none';
                             </script>
-                            <button type="submit" value="Place Order" class="btn btn-success form-control">Place Order</button>
+                                        <button type = "submit" value = "Place Order" class="btn btn-success form-control">Place Order</button>
+                            }
+                            else
+                            {
+                            <button type="submit" value="Place Order" class="btn btn-primary form-control">Place Order</button>
+                            }
                         </div>
                     </div>
                 </div>
@@ -135,3 +148,6 @@
         </div>
     </div>
 </form>
+@section scripts{ 
+  <partial name="_ValidationScriptsPartial" />
+}
