Added 12. Ship Order and Cancel Order

--- a/BulkyBook/BulkyBook/Areas/Customer/Views/Home/Details.cshtml
+++ b/BulkyBook/BulkyBook/Areas/Customer/Views/Home/Details.cshtml
@@ -22,7 +22,7 @@
                                 <h5 class="text-muted">ISBN : @Model.Product.ISBN</h5>
                             </div>
                             <div class="row pl-2">
-                                <h5 class="text-muted pb-2">List Price: <strike>$@Model.Product.ListPrice.ToString("c")</strike></h5>
+                                <h5 class="text-muted pb-2">List Price: <strike>&#2547; @Model.Product.ListPrice.ToString()</strike></h5>
                             </div>
                             <div class="row text-center pl-2">
                                 <div class="p-1 col-2 bg-secondary border-bottom">
@@ -43,13 +43,13 @@
                                     <div>Price</div>
                                 </div>
                                 <div class="p-1 col-2 bg-secondary">
-                                    <div>@Model.Product.Price.ToString("c")</div>
+                                    <div>&#2547;@Model.Product.Price.ToString()</div>
                                 </div>
                                 <div class="p-1 col-2 bg-secondary">
-                                    <div>@Model.Product.Price50.ToString("c")</div>
+                                    <div>&#2547;@Model.Product.Price50.ToString()</div>
                                 </div>
                                 <div class="p-1 col-2 bg-secondary">
-                                    <div>@Model.Product.Price100.ToString("c")</div>
+                                    <div>&#2547;@Model.Product.Price100.ToString()</div>
                                 </div>
                             </div>
                             <div class="row pl-2">
