--- a/BulkyBook/BulkyBook/Views/Shared/_Layout.cshtml
+++ b/BulkyBook/BulkyBook/Views/Shared/_Layout.cshtml
@@ -52,9 +52,15 @@
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">User</a>
 
+
                                 </div>
                             </li>
                         }
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
+
                         @if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.SsShoppinCart) != null)
                         {
                             <li style="color:white;">
@@ -68,12 +74,12 @@
                         }
                         else
                         {
-                        <li style="color:white;">
-                            <a href="#" class="nav-link">
-                                
-                                <i class="fas fa-shopping-cart"> </i>&nbsp; (0)
-                            </a>
-                        </li>
+                            <li style="color:white;">
+                                <a href="#" class="nav-link">
+
+                                    <i class="fas fa-shopping-cart"> </i>&nbsp; (0)
+                                </a>
+                            </li>
                         }
                     </ul>
                 </div>
