--- a/BulkyBook/BulkyBook/Views/Shared/_Layout.cshtml
+++ b/BulkyBook/BulkyBook/Views/Shared/_Layout.cshtml
@@ -56,9 +56,19 @@
                                 </div>
                             </li>
                         }
-
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">
+                                @if (User.IsInRole(SD.Role_Admin)|| User.IsInRole(SD.Role_Employee))
+                                {
+                                <span>Manage Order</span>
+
+                                }
+                                else
+                                {
+                                <span>Order History</span>
+                                }
+                                
+                            </a>
                         </li>
 
                         @if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.SsShoppinCart) != null)
