--- a/BulkyBook/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
@@ -4,6 +4,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@if (TempData["Success"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @TempData["Success"]
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
+
+else
+{
+    @if (TempData["Error"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            @TempData["Error"]
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
+}
+
+
+
+
 <br />
 
 <div class="row">
@@ -93,10 +119,3 @@
     @section Scripts{
 
     <script src="~/js/category.js"></script>*@
-   
-
-
-
-
-
-
